--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,29 +1,38 @@
 <section class="container">
   <header>Registration Form</header>
 
-  <form class="form">
+  <form class="form" [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
     <div class="column">
       <div class="input-box">
-        <input type="text" placeholder="First Name" />
+        <input type="text" placeholder="First Name" formControlName="firstname" />
+        @if (reactiveForm.get('firstname')?.invalid && reactiveForm.get('firstname')?.touched) {
+          <small>*First Name is required</small>
+        }
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Last Name" />
+        <input type="text" placeholder="Last Name" formControlName="lastname"/>
+        @if (reactiveForm.get('lastname')?.invalid && reactiveForm.get('lastname')?.touched) {
+          <small>*Last Name is required</small>
+        }
       </div>
     </div>    
 
     <div class="input-box">
-      <input type="text" placeholder="Email" />
+      <input type="text" placeholder="Email" formControlName="email"/>
+      @if (reactiveForm.get('email')?.invalid && reactiveForm.get('email')?.touched) {
+          <small>*Email is not valid</small>
+        }
     </div>
 
     <div class="column">
       <div class="input-box">
-        <input type="text" placeholder="username" />
+        <input type="text" placeholder="username" formControlName="username"/>
         <button class="btn-gen-username" type="button">
           Create a Username
         </button>
       </div>
       <div class="input-box">
-        <input type="date" placeholder="Date of Birth" />
+        <input type="date" placeholder="Date of Birth" formControlName="dob"/>
       </div>
     </div>
 
@@ -33,79 +42,91 @@
       <h3>Gender</h3>
       <div class="gender-option">
         <div class="gender">
-          <input type="radio" value="male" id="check-male" />
+          <input type="radio" value="male" id="check-male" formControlName="gender"/>
           <label for="check-male">Male</label>
         </div>
         <div class="gender">
-          <input type="radio" value="female" id="check-female" />
+          <input type="radio" value="female" id="check-female" formControlName="gender"/>
           <label for="check-female">Female</label>
         </div>
         <div class="gender">
-          <input type="radio" value="other" id="check-other" />
+          <input type="radio" value="other" id="check-other" formControlName="gender"/>
           <label for="check-other">Prefer not to say</label>
         </div>
       </div>
     </div>
 
-    <div class="input-box address">
+    <div class="input-box address" formGroupName="address">
       <label>Address</label>
-      <input type="text" placeholder="Street address" />
+      <input type="text" placeholder="Street address" formControlName="street"/>
+      @if (reactiveForm.get('address.street')?.invalid && reactiveForm.get('address.street')?.touched) {
+        <small>*Street address is required</small>
+      }
       <div class="column">
         <div class="select-box">
-          <select name="country">
+          <select name="country" formControlName="country">
             <option hidden>Country</option>
             <option>America</option>
             <option>Japan</option>
             <option>India</option>
             <option>Nepal</option>
           </select>
+          @if (reactiveForm.get('address.country')?.invalid && reactiveForm.get('address.country')?.touched) {
+            <small>*Country is required</small>
+          }
         </div>
-        <input type="text" placeholder="City" />
+        <input type="text" placeholder="City" formControlName="city"/>
       </div>
       <div class="column">
-        <input type="text" placeholder="Region" />
-        <input type="number" placeholder="Postal code" />
+        <input type="text" placeholder="Region" formControlName="region"/>
+        <input type="number" placeholder="Postal code" formControlName="postal"/>
+        @if (reactiveForm.get('address.postal')?.invalid && reactiveForm.get('address.postal')?.touched) {
+          <small>*Postal code is required</small>
+        }
       </div>
     </div>
 
     <!--HTML for Skills Form Array -->
     <div class="input-box skills" formArrayName="skills">
       <h4>Add Skills</h4>
-      <div class="column">
-        <input type="text" placeholder="Add Skill...">
-        <button type="button" class="btn-add-delete">Delete</button>
-      </div> 
+      @for(control of skillsControls; track $index) {
+        <div class="column">
+          <input type="text" placeholder="Add skills ..." [formControlName]="$index"/>
+          <button type="button" class="btn-add-delete" (click)="deleteSkills($index)">Delete</button>
+        </div>
+      }
     </div>
-    <button type="button" class="btn-add-delete">Add Skills</button>
+    <button type="button" class="btn-add-delete" (click)="addSkill()">Add Skills</button>
 
     <!--HTML for Experience Form Array -->
-    <div class="input-box">
-      <div class="experience">
-        <label>Experience</label>
-        <input type="text" placeholder="Company Name" />
-        <div class="column">
-          <div class="select-box">
-            <select>
-              <option hidden>Position</option>
-              <option>Junior Developer</option>
-              <option>Software Developer</option>
-              <option>Senior Developer</option>
-              <option>Team Lead</option>
-            </select>
+    <div class="input-box" formArrayName="experience">
+      @for(control of experienceControls; track $index) {
+        <div class="experience" [formGroupName]="$index">
+          <label>Experience</label>
+          <input type="text" placeholder="Company Name" formControlName="company" />
+          <div class="column">
+            <div class="select-box">
+              <select formControlName="position">
+                <option hidden>Position</option>
+                <option>Junior Developer</option>
+                <option>Software Developer</option>
+                <option>Senior Developer</option>
+                <option>Team Lead</option>
+              </select>
+            </div>
+            <input type="number" placeholder="Experience" formControlName="totalExp"/>
           </div>
-          <input type="number" placeholder="Experience" />
+          <div class="column">
+            <input type="date" placeholder="Start Date" formControlName="start"/>
+            <input type="date" placeholder="End Date" formControlName="end"/>
+          </div>
+          <button type="button" class="btn-add-delete" (click)="deleteExperience($index)">Delete Experience</button>
         </div>
-        <div class="column">
-          <input type="date" placeholder="Start Date" />
-          <input type="date" placeholder="End Date" />
-        </div>
-        <button type="button" class="btn-add-delete">Delete Experience</button>
-      </div>
+      }
     </div>
-    <button type="button" class="btn-add-delete">Add Experience</button>
+    <button type="button" class="btn-add-delete" (click)="addExperience()">Add Experience</button>
 
-    <input type="submit" value="Submit" class="submit-btn"> 
-    <!-- [disabled]="!reactiveForm.valid" -->
+    <input type="submit" value="Submit" class="submit-btn" [disabled]="!reactiveForm.valid" /> 
   </form>
 </section>
 
